✨ feat: prepare for analysis

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNkI98ZjVTtoHr+9Tos8cVb",
+      "authorship_tag": "ABX9TyP/JoZfC3JFd9qgBgzJ+VGS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,281 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CbZe8xth0RVy"
+      },
+      "source": [
+        "!pip install --upgrade -q gspread"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "q6dKd4p6zZWR"
+      },
+      "source": [
+        "# Authenticate the Google user\n",
+        "from google.colab import auth\n",
+        "auth.authenticate_user()\n",
+        "\n",
+        "import gspread\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "\n",
+        "gc = gspread.authorize(GoogleCredentials.get_application_default())"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9aQa4Djq0YEv"
+      },
+      "source": [
+        "# Access the Google Sheet\n",
+        "worksheet = gc.open_by_key('1DFscs0MK6UhjHgnSXlmRWOSTpfLgb0KAYF5297V9NRg')\n",
+        "worksheet = worksheet.worksheet('Form Responses')\n",
+        "data = worksheet.get_all_values()"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 751
+        },
+        "id": "GHMEcIW00xNk",
+        "outputId": "c8253436-6130-418e-9cd7-39d09ac0c11b"
+      },
+      "source": [
+        "# Transform the Google Sheet data to a Pandas DataFrame\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "df = pd.DataFrame(data[1:], columns=data[0])\n",
+        "\n",
+        "# Clean the data\n",
+        "df = df.replace('',np.nan)\n",
+        "df = df.replace('N/A', np.nan)\n",
+        "for column in df.columns:\n",
+        "  df[column] = df[column].astype('float64', errors='ignore')\n",
+        "df.head()"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Timestamp</th>\n",
+              "      <th>Agreement 同意</th>\n",
+              "      <th>Have you prepared for your demise or when an accident occurs?</th>\n",
+              "      <th>Have you prepared a will?</th>\n",
+              "      <th>Do you update your will?</th>\n",
+              "      <th>Do you have your convenient records of these ready? [ your assets]</th>\n",
+              "      <th>Do you have your convenient records of these ready? [your bank accounts info]</th>\n",
+              "      <th>Do you have your convenient records of these ready? [social media accounts]</th>\n",
+              "      <th>What (kind of) message would you like to leave behind? For whom?</th>\n",
+              "      <th>What else have you done in preparation for your demise or an emergency?</th>\n",
+              "      <th>If you die right now, how well will things be taken care of? How much information do your loved ones and legal partners have to take care of things for you?</th>\n",
+              "      <th>Have you lost a loved one recently?</th>\n",
+              "      <th>When did you loose your loved one?</th>\n",
+              "      <th>Was it an expected death?</th>\n",
+              "      <th>Did they leave a will?</th>\n",
+              "      <th>If so, was it easy to find?</th>\n",
+              "      <th>Did they leave messages — for you and other loved ones?</th>\n",
+              "      <th>If so, was it easy to have access?</th>\n",
+              "      <th>Did they leave you relevant account information (social media, bank)?</th>\n",
+              "      <th>What other information did you wish you have?</th>\n",
+              "      <th>Age 年齡</th>\n",
+              "      <th>What's your gender? 性別</th>\n",
+              "      <th>Are you married? 你結婚了嗎？</th>\n",
+              "      <th>How many kids do you have? 你有幾個小孩？</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>11/30/2020 13:04:52</td>\n",
+              "      <td>I agree 我同意</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>“Listen To Florence Welch”. ~ my sister</td>\n",
+              "      <td>I think about it rarely. But when I do I never...</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Less than a month</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>19.0</td>\n",
+              "      <td>Female 女性</td>\n",
+              "      <td>No 否</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>11/30/2020 13:10:00</td>\n",
+              "      <td>I agree 我同意</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Shit happens?\\nIf something does happen, I'd l...</td>\n",
+              "      <td>Nothing. I have told my family my bank account...</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Less than a month</td>\n",
+              "      <td>Somewhat</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>My grandpa kept all my grandma's info. \\nMy gr...</td>\n",
+              "      <td>23.0</td>\n",
+              "      <td>Female 女性</td>\n",
+              "      <td>No 否</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>11/30/2020 13:12:26</td>\n",
+              "      <td>I agree 我同意</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Don't cry, to my loved ones</td>\n",
+              "      <td>NO</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>Female 女性</td>\n",
+              "      <td>No 否</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>11/30/2020 13:35:34</td>\n",
+              "      <td>I agree 我同意</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>1-6 months</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>23.0</td>\n",
+              "      <td>Male 男性</td>\n",
+              "      <td>No 否</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>11/30/2020 14:09:58</td>\n",
+              "      <td>I agree 我同意</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>My laptop. Family, Close Friends</td>\n",
+              "      <td>no</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>Female 女性</td>\n",
+              "      <td>No 否</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             Timestamp  ... How many kids do you have? 你有幾個小孩？\n",
+              "0  11/30/2020 13:04:52  ...                                0.0\n",
+              "1  11/30/2020 13:10:00  ...                                0.0\n",
+              "2  11/30/2020 13:12:26  ...                                0.0\n",
+              "3  11/30/2020 13:35:34  ...                                0.0\n",
+              "4  11/30/2020 14:09:58  ...                                0.0\n",
+              "\n",
+              "[5 rows x 24 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BM4CkEbM02EM"
       },
       "source": [
         ""
