--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/JoZfC3JFd9qgBgzJ+VGS",
+      "authorship_tag": "ABX9TyPpPzXmFTgm77SgpuZqxfRi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -301,7 +301,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BM4CkEbM02EM"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 188
+        },
+        "id": "BM4CkEbM02EM",
+        "outputId": "4c7f56a4-fa45-4393-9ddb-6243953d6d53"
+      },
+      "source": [
+        "# Create correlation matrix\n",
+        "corr_matrix = df.corr()\n",
+        "\n",
+        "corr_matrix.style.background_gradient(cmap='Blues')"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<style  type=\"text/css\" >\n",
+              "#T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row0_col0,#T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row1_col1,#T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row2_col2{\n",
+              "            background-color:  #08306b;\n",
+              "            color:  #f1f1f1;\n",
+              "        }#T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row0_col1,#T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row0_col2,#T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row1_col0{\n",
+              "            background-color:  #f7fbff;\n",
+              "            color:  #000000;\n",
+              "        }#T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row1_col2{\n",
+              "            background-color:  #2a7ab9;\n",
+              "            color:  #000000;\n",
+              "        }#T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row2_col0{\n",
+              "            background-color:  #d7e6f5;\n",
+              "            color:  #000000;\n",
+              "        }#T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row2_col1{\n",
+              "            background-color:  #1e6db2;\n",
+              "            color:  #f1f1f1;\n",
+              "        }</style><table id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >If you die right now, how well will things be taken care of? How much information do your loved ones and legal partners have to take care of things for you?</th>        <th class=\"col_heading level0 col1\" >Age 年齡</th>        <th class=\"col_heading level0 col2\" >How many kids do you have? 你有幾個小孩？</th>    </tr></thead><tbody>\n",
+              "                <tr>\n",
+              "                        <th id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002level0_row0\" class=\"row_heading level0 row0\" >If you die right now, how well will things be taken care of? How much information do your loved ones and legal partners have to take care of things for you?</th>\n",
+              "                        <td id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row0_col0\" class=\"data row0 col0\" >1.000000</td>\n",
+              "                        <td id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row0_col1\" class=\"data row0 col1\" >0.032390</td>\n",
+              "                        <td id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row0_col2\" class=\"data row0 col2\" >0.189342</td>\n",
+              "            </tr>\n",
+              "            <tr>\n",
+              "                        <th id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002level0_row1\" class=\"row_heading level0 row1\" >Age 年齡</th>\n",
+              "                        <td id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row1_col0\" class=\"data row1 col0\" >0.032390</td>\n",
+              "                        <td id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row1_col1\" class=\"data row1 col1\" >1.000000</td>\n",
+              "                        <td id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row1_col2\" class=\"data row1 col2\" >0.770493</td>\n",
+              "            </tr>\n",
+              "            <tr>\n",
+              "                        <th id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002level0_row2\" class=\"row_heading level0 row2\" >How many kids do you have? 你有幾個小孩？</th>\n",
+              "                        <td id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row2_col0\" class=\"data row2 col0\" >0.189342</td>\n",
+              "                        <td id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row2_col1\" class=\"data row2 col1\" >0.770493</td>\n",
+              "                        <td id=\"T_3d59fd92_3917_11eb_b3f0_0242ac1c0002row2_col2\" class=\"data row2 col2\" >1.000000</td>\n",
+              "            </tr>\n",
+              "    </tbody></table>"
+            ],
+            "text/plain": [
+              "<pandas.io.formats.style.Styler at 0x7f80ae5ce400>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZGT-Uv-i2VT9"
       },
       "source": [
         ""
