✨ feat: correlation analysis

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpPzXmFTgm77SgpuZqxfRi",
+      "authorship_tag": "ABX9TyNA6LjqxzoJVMhEr5QF78nk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,15 +369,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "ZGT-Uv-i2VT9"
+        "id": "FFiOX0OR23cW"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "It makes sense that the *older* a person is, the *more kids* they have. (The positive correlation between age and kids). \n",
+        "\n",
+        "Second, the *younger* a person is, the *less prepared* they are for their passing. \n",
+        "\n",
+        "Finally, people with fewer kids seem to have less prepared for their passing. However, that might also be because the people who are younger are also the people who have fewer kids."
+      ]
     }
   ]
 }
