📝 docs: add documentation to a few lines

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOMksA1E1NMYgLvsXcPXfL4",
+      "authorship_tag": "ABX9TyNcdYyO8qEn++URhcwcer/j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,6 +309,7 @@
         "outputId": "92c7b752-4962-4973-a073-408ca78457b1"
       },
       "source": [
+        "# Map yes/no inputs to numbers\n",
         "yes_no_columns = [\n",
         "                  'Have you prepared for your demise or when an accident occurs?',\n",
         "                  'Have you prepared a will?',\n",
@@ -879,58 +880,6 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "E6uV5_gs48nd",
-        "outputId": "932c5837-41b3-4e97-dc0e-02aeeaeb91e7"
-      },
-      "source": [
-        "df.hist()"
-      ],
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:1: UserWarning: To output multiple subplots, the figure containing the passed axes is being cleared\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f809bb8c2b0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809bace710>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809ba7ee80>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809ba3a630>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f809ba68da0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809ba25550>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809b9d5cc0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809b98e438>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f809b98e4a8>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809b8f7390>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809b926b00>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809b8e42b0>],\n",
-              "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f809b891a20>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809b84d1d0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809b7fb940>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f809b7b80f0>]],\n",
-              "      dtype=object)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 53
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
@@ -939,6 +888,7 @@
       },
       "source": [
         "for column in df:\n",
+        "  # Only plot histograms for numeric columns\n",
         "  if df[column].dtypes != 'O':\n",
         "    df.hist(column=column)"
       ],
